--- a/src/output.css
+++ b/src/output.css
@@ -564,6 +564,9 @@
     }
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-\[url\(\'\.\/assets\/renewables\/wind-power-plant\.jpg\'\)\] {
+    background-image: url('./assets/renewables/wind-power-plant.jpg');
+  }
   .bg-\[url\(\'\/assets\/renewables\/wind-power-plant\.jpg\'\)\] {
     background-image: url('/assets/renewables/wind-power-plant.jpg');
   }
